<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/temperature_open_bg_open">

    <LinearLayout
        android:id="@+id/low_energy_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="330dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ic_temperature_low_energy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_temperature_low_energy" />

        <TextView
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:text="@string/temperature_open_low_energy"
            android:textSize="60sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/open_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="330dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="480dp"
            android:layout_height="wrap_content"
            android:text="@string/temperature_open_already"
            android:textSize="60sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/temperature_open_current_temperature"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:alpha="0.7"/>

        <TextView
            android:id="@+id/temperature_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_open_temperature_number"
            android:textSize="120sp"
            android:textColor="@color/white" />
    </LinearLayout>
</FrameLayout>