<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="@dimen/confirm_dialog_width"
        android:layout_height="@dimen/confirm_dialog_height"
        android:layout_gravity="center"
        android:src="@drawable/dialog_bg"/>

    <LinearLayout
        android:layout_width="@dimen/confirm_dialog_width"
        android:layout_height="@dimen/confirm_dialog_height"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="64dp"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="125dp"
            android:paddingEnd="125dp"
            android:layout_marginTop="36dp"
            android:text="@string/nap_disable"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <LinearLayout
            android:id="@+id/dialog_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp"
            android:gravity="center">

            <Button
                android:id="@+id/dialog_positive"
                android:layout_width="291dp"
                android:layout_height="@dimen/confirm_dialog_btn_height"
                android:background="@drawable/sync_dialog_button_selector"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/confirm"
                android:textSize="@dimen/mega_text_size_button" />

            <View
                android:layout_width="48dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/dialog_negative"
                android:layout_width="291dp"
                android:layout_height="@dimen/confirm_dialog_btn_height"
                android:background="@drawable/sync_dialog_button_selector"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/mega_text_size_button" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>